# functional-programming-rus

./: .gitignore
presentations/: Course Program.md
presentations/Module 1/: Модуль 1.pptx
presentations/Module 2/: Модуль 2. Часть 1. Раздел 1.pptx  Модуль 2. Часть 1. Раздел 2, 3.pptx  Модуль 2. Часть 2.pptx
sources/: README.md  haskell-app.cabal
sources/app/: Main.hs
sources/src/: BinaryTrees.hs  ListUtils.hs  MathUtils.hs  StringUtils.hs
