cabal-version: 2.4
name:          haskell-app
version:       0.1.0.0
synopsis:      Simple multi-module Haskell demo
license:       MIT
build-type:    Simple

executable haskell-app
  main-is:       Main.hs
  hs-source-dirs: app, src
  other-modules:
    MathUtils
    StringUtils
    ListUtils
  build-depends:
    base >= 4.14 && < 5
      , array
  default-language: Haskell2010
  ghc-options: -Wall